fix alignment of progress bar with text

--- a/css/navbarTabs.css
+++ b/css/navbarTabs.css
@@ -260,7 +260,7 @@ body.is-focus-mode .tab-item {
 	position: absolute;
 	top: 0;
 	left: 0;
-	margin: 0 0.75em;
+	margin: 0 0.8em;
 }
 
 .p0 {
